# ya_gpt_telegram_bot

./: .gitignore  Makefile  README.md  commands.txt  docker-compose.yml  pyproject.toml
docker/: Dockerfile
tests/: test_simple.py
ya_gpt_bot/: __init__.py  __main__.py  version.py
ya_gpt_bot/bot_config/: __init__.py  launch.py  routers.py
ya_gpt_bot/bot_config/filters/: __init__.py
ya_gpt_bot/bot_config/handlers/: __init__.py  chat.py  common.py  direct.py  fallback.py  group.py
ya_gpt_bot/bot_config/middlewares/: __init__.py  digest.py  generation_request.py  logging.py  retrying.py
ya_gpt_bot/bot_config/texts/: __init__.py  ru.py
ya_gpt_bot/bot_config/utils/: __init__.py  dependencies.py  messages.py  reactions.py  response.py  text.py
ya_gpt_bot/config/: __init__.py  app_config.py
ya_gpt_bot/db/: __init__.py  metadata.py  session_manager.py
ya_gpt_bot/db/entities/: __init__.py  chats.py  conversation.py  enums.py  messages.py  user_preferences.py  users.py
ya_gpt_bot/db/migrator/: alembic.ini  env.py
ya_gpt_bot/db/operations/: __init__.py  messages.py  users.py  users_preferences.py
ya_gpt_bot/gpt/: __init__.py  client.py  waiter.py
ya_gpt_bot/main/: __init__.py  config.py  group.py  run_bot.py
ya_gpt_bot/services/: __init__.py  dtos.py  messages_service.py  user_preferences_service.py  user_service.py
ya_gpt_bot/services/impl/: __init__.py  conversation_service.py  messages_service.py  user_preferences_service.py  user_service.py
ya_gpt_bot/ya_gpt/: __init__.py  auth_service.py  client.py  waiter.py
(+7 files in other folders)
